# vpy

./: .gitignore  Makefile  manage.py  pyproject.toml
.github/workflows/: deploy.yaml  styles.yml  tests.yaml
base/: blocks.py  cache.py  choices.py  models.py  schemas.py  struct_values.py  validators.py  views.py  wagtail_hooks.py
base/locale/en/LC_MESSAGES/: django.po
base/locale/es/LC_MESSAGES/: django.po
base/locale/pt/LC_MESSAGES/: django.po
base/management/commands/: submit_urls_to_indexnow.py
base/migrations/: 0001_initial.py  0002_initial.py  0003_formpage_formfield.py  0004_formpage_thank_you_page.py
base/templates/base/: form_page.html  standard_page.html
base/templatetags/: navigation_tags.py
blog/: models.py  tests.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_index_page.html  blog_page.html
help/: models.py  urls.py  views.py
help/locale/en/LC_MESSAGES/: django.po
help/locale/es/LC_MESSAGES/: django.po
help/locale/pt/LC_MESSAGES/: django.po
help/migrations/: 0001_initial.py
help/templates/help/: help_article_page.html  help_category_page.html  help_index_page.html
home/: models.py
home/locale/en/LC_MESSAGES/: django.po
home/locale/es/LC_MESSAGES/: django.po
home/locale/pt/LC_MESSAGES/: django.po
home/migrations/: 0001_initial.py  0002_alter_homepage_options_homepage_body_homepage_faq_and_more.py  0003_homepage_appear_in_search_results_and_more.py
home/templates/home/: home_page.html  welcome_page.html
locale/en/LC_MESSAGES/: django.po
locale/es/LC_MESSAGES/: django.po
locations/: models.py  tests.py
locations/locale/en/LC_MESSAGES/: django.po
locations/locale/es/LC_MESSAGES/: django.po
locations/locale/pt/LC_MESSAGES/: django.po
locations/migrations/: 0001_initial.py  0002_stationindexpage.py  0003_alter_stationpage_links.py  0004_service_stationpage_departamento_and_more.py
locations/templates/locations/: city_index_page.html  city_page.html  station_index_page.html  station_page.html
main/: context_processors.py  gunicorn.conf.py  nginx.conf  settings.py  urls.py  wsgi.py
main/locale/en/LC_MESSAGES/: django.po
main/locale/es/LC_MESSAGES/: django.po
pages/: forms.py  sitemaps.py  urls.py  views.py
pages/locale/es/LC_MESSAGES/: django.po
pages/locale/pt/LC_MESSAGES/: django.po
pages/templates/pages/: company_landing.html  contact.html  explore.html  feedback.html  styleguide.html
partners/: managers.py  models.py
partners/locale/en/LC_MESSAGES/: django.po
partners/locale/es/LC_MESSAGES/: django.po
partners/migrations/: 0001_initial.py  0002_alter_partnerpage_links.py  0003_partnerpage_ratings.py  0004_partnerpage_destinations_partnerpage_info.py  0005_remove_amenity_icon_partnerindexpage_body_and_more.py
partners/templates/partners/: partner_index_page.html  partner_page.html
search/: views.py
search/locale/es/LC_MESSAGES/: django.po
search/locale/pt/LC_MESSAGES/: django.po
search/templates/search/: search.html
templates/: 404.html  500.html  base.html  robots.txt  styleguide.html
templates/account/: email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  signup.html  verification_sent.html
templates/blocks/: blockquote.html  contact_block.html  document_block.html  embed_block.html  faq_block.html  further_reading_block.html  gallery_block.html  heading_block.html  image_block.html  image_link_block.html  link_block.html  nav_tab_block.html  nav_tab_links_block.html  promotions_block.html  ratings.html
templates/includes/: advice.html  company-logos.html  footer-grand.html  messages.html  mission.html  navigation-basic.html  navigation.html  search_form.html  seo_links.html
templates/layouts/: base.html
templates/socialaccount/: connections.html  login.html  signup.html
templates/tags/: breadcrumbs.html
trips/: urls.py  views.py
trips/templates/trips/: order.html  payment-success.html  payment.html  search_results.html  seats.html
users/: adapters.py  admin.py  signals.py  validators.py
users/migrations/: 0001_initial.py
