[project]
name = "Ventanita-Paraguay"
version = "0.1.0"
description = "Intercity bus ticketing platform in Paraguay"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django-allauth[socialaccount]>=65.14.3",
    "gunicorn>=25.1.0",
    "lxml>=6.0.2",
    "python-dotenv>=1.2.1",
    "wagtail>=7.3",
    "wagtail-localize>=1.13",
]

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "django-debug-toolbar>=6.2.0",
    "django-extensions>=4.1",
    "ipython>=9.10.0",
]

[tool.ruff]
line-length = 120
exclude = ["*migrations*", "static"]

[tool.ruff.lint.isort]
combine-as-imports=true
known-first-party=["blog", "base", "help", "home", "search", "users", "trips", "pages"]
known-third-party=["rest_framework"]
lines-after-imports=2
section-order=["future", "standard-library", "django", "wagtail",  "third-party", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
"django"=["django"]
"wagtail"=["wagtail"]

[tool.djlint]
blank_line_before_tag="load,extends"
blank_line_after_tag="load,extends,endblock"
close_void_tags=true
custom_blocks="toc,example"
custom_html="mjml"
exclude=".venv,venv,.tox,.eggs,.git"
extend_exclude=".custom"
format_attribute_template_tags=true
format_css=true
format_js=true
ignore_blocks="raw,example"
indent=2
max_attribute_length=120
max_line_length=120
profile="django"
# preserve_blank_lines=true
use_gitignore=true

[tool.djlint.css]
indent_size=5

[tool.djlint.js]
indent_size=5
